// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDesktop buttonProps 1`] = `
<div
  className="YpcSelect"
>
  <button
    aria-haspopup="listbox"
    className="YpcButton YpcSelect-Button"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onPointerDown={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <div>
      Test
    </div>
  </button>
  <ul
    className="YpcMenu YpcSelect-Menu"
    hidden={true}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="listbox"
    tabIndex={-1}
  />
</div>
`;

exports[`SelectDesktop className 1`] = `
<div
  className="YpcSelect Test"
>
  <button
    aria-haspopup="listbox"
    className="YpcButton YpcSelect-Button"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onPointerDown={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    onTouchStart={[Function]}
    type="button"
  />
  <ul
    className="YpcMenu YpcSelect-Menu"
    hidden={true}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="listbox"
    tabIndex={-1}
  />
</div>
`;

exports[`SelectDesktop onSelectChange 1`] = `
<div
  className="YpcSelect"
>
  <button
    aria-haspopup="listbox"
    className="YpcButton YpcSelect-Button"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onPointerDown={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    onTouchStart={[Function]}
    type="button"
  />
  <ul
    className="YpcMenu YpcSelect-Menu"
    hidden={true}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="listbox"
    tabIndex={-1}
  />
</div>
`;

exports[`SelectDesktop value & options 1`] = `
<div
  className="YpcSelect"
>
  <button
    aria-haspopup="listbox"
    className="YpcButton YpcSelect-Button"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onPointerDown={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    onTouchStart={[Function]}
    type="button"
  />
  <ul
    className="YpcMenu YpcSelect-Menu"
    hidden={true}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="listbox"
    tabIndex={-1}
  >
    <li
      className="YpcMenu-Item YpcMenu-Item_disabled"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPress={[Function]}
      onTouchStart={[Function]}
      role="option"
    >
      Item 1
    </li>
    <li
      aria-selected={true}
      className="YpcMenu-Item"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPress={[Function]}
      onTouchStart={[Function]}
      role="option"
      tabIndex={-1}
    >
      <div>
        Item 2
      </div>
    </li>
    <li
      className="YpcMenu-Item"
      id="test-id"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPress={[Function]}
      onTouchStart={[Function]}
      role="option"
      tabIndex={-1}
    >
      Item 3
    </li>
  </ul>
</div>
`;
